--- a/eclipse-workspace/SeleniumJavaFramework/extentReport.html
+++ b/eclipse-workspace/SeleniumJavaFramework/extentReport.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 26, 2022 12:13:55 PM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 26, 2022 10:14:13 PM</span></a>
 </li>
 </ul>
 </div>
@@ -82,7 +82,7 @@
           <div class="test-detail">
             <p class="name">TestCase1</p>
             <p class="text-sm">
-              <span>12:13:56 PM</span> / <span>00:00:00:005</span>
+              <span>10:14:13 PM</span> / <span>00:00:00:009</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,9 +91,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">TestCase1</h5>
-<span class='badge badge-success'>03.26.2022 12:13:56 PM</span>
-<span class='badge badge-danger'>03.26.2022 12:13:56 PM</span>
-<span class='badge badge-default'>00:00:00:005</span>
+<span class='badge badge-success'>03.26.2022 10:14:13 PM</span>
+<span class='badge badge-danger'>03.26.2022 10:14:13 PM</span>
+<span class='badge badge-default'>00:00:00:009</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -106,9 +106,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>12:13:56 PM</td>
+        <td>10:14:13 PM</td>
         <td>
-          Test passed
+          Test is passed
         </td>
       </tr>
   </tbody>
@@ -123,7 +123,7 @@
           <div class="test-detail">
             <p class="name">TestCase2</p>
             <p class="text-sm">
-              <span>12:13:56 PM</span> / <span>00:00:00:000</span>
+              <span>10:14:13 PM</span> / <span>00:00:00:000</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -132,8 +132,8 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">TestCase2</h5>
-<span class='badge badge-success'>03.26.2022 12:13:56 PM</span>
-<span class='badge badge-danger'>03.26.2022 12:13:56 PM</span>
+<span class='badge badge-success'>03.26.2022 10:14:13 PM</span>
+<span class='badge badge-danger'>03.26.2022 10:14:13 PM</span>
 <span class='badge badge-default'>00:00:00:000</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
@@ -147,7 +147,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>12:13:56 PM</td>
+        <td>10:14:13 PM</td>
         <td>
           Test failed
         </td>
@@ -164,7 +164,7 @@
           <div class="test-detail">
             <p class="name">Google Test</p>
             <p class="text-sm">
-              <span>12:13:56 PM</span> / <span>00:00:04:144</span>
+              <span>10:14:13 PM</span> / <span>00:00:04:019</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -173,9 +173,9 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Google Test</h5>
-<span class='badge badge-success'>03.26.2022 12:13:56 PM</span>
-<span class='badge badge-danger'>03.26.2022 12:14:00 PM</span>
-<span class='badge badge-default'>00:00:04:144</span>
+<span class='badge badge-success'>03.26.2022 10:14:13 PM</span>
+<span class='badge badge-danger'>03.26.2022 10:14:17 PM</span>
+<span class='badge badge-default'>00:00:04:019</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -187,9 +187,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>12:14:00 PM</td>
+        <td>10:14:17 PM</td>
         <td>
-          Testing complete
+          Testing is complete
         </td>
       </tr>
   </tbody>
@@ -211,13 +211,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 26, 2022 12:13:55 PM</h3>
+<h3>Mar 26, 2022 10:14:13 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 26, 2022 12:14:01 PM</h3>
+<h3>Mar 26, 2022 10:14:22 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -287,7 +287,7 @@
 </div></div>
 <script>
 var timeline = {
-"TestCase1":0.005,"TestCase2":0,"Google Test":4.144
+"TestCase1":0.009,"TestCase2":0,"Google Test":4.019
 };
 </script>
 <div class="row">
